--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "mongoose": "^5.9.21"
+    "mongoose": "^5.13.8"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +16,7 @@
     "type": "git",
     "url": "git+https://github.com/FBW23/ds-mongoose-intro.git"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
