--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^4.1.0",
-    "mongoose": "^5.9.21"
+    "mongoose": "^5.13.8",
+    "morgan": "^1.10.0"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,5 +23,6 @@
   "bugs": {
     "url": "https://github.com/FBW23/ds-mongoose-intro/issues"
   },
-  "homepage": "https://github.com/FBW23/ds-mongoose-intro#readme"
+  "homepage": "https://github.com/FBW23/ds-mongoose-intro#readme",
+  "type": "module"
 }
